--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -36,6 +38,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
+    implementation('androidx.lifecycle:lifecycle-extensions:2.2.0')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -49,8 +52,27 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // Top Snack Bar (instead of com.google.android.material.snackbar[.Snackbar])
+    implementation 'com.androidadvance:topsnackbar:1.1.1'
+
+    // Dagger
+    def dagger_version = '2.27'
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
+    // Retrofit 2
+    implementation('com.squareup.retrofit2:retrofit:2.7.1')
+    implementation('com.squareup.retrofit2:adapter-rxjava2:2.6.2')
+    implementation('com.squareup.retrofit2:converter-gson:2.7.1')
+    implementation('com.squareup.okhttp3:logging-interceptor:3.14.2')
+    implementation('com.squareup.okhttp3:okhttp-urlconnection:3.12.12')
+
     //RX
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
+
+    compileOnly 'javax.annotation:jsr250-api:1.0'
 }
