--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Feb 09 07:21:24 BRT 2021
-sdk.dir=E\:\\Android\\Sdk
+sdk.dir=/Volumes/Data/Android/sdk
