--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,38 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            storeFile file("key.keystore")
+            storePassword ''
+            keyAlias ''
+            keyPassword ''
+        }
+    }
+
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            manifestPlaceholders = [appLabel:"@string/app_name"]
+            dimension "default"
+            applicationIdSuffix '.dev'
+            buildConfigField "String", "SERVER_URL", BASE_URL_DEV
+        }
+
+        staging {
+            manifestPlaceholders = [appLabel:"@string/app_name"]
+            applicationIdSuffix '.stage'
+            dimension "default"
+            buildConfigField "String", "SERVER_URL", BASE_URL_STAGING
+        }
+
+        prod {
+            manifestPlaceholders = [appLabel:"@string/app_name"]
+            dimension "default"
+            buildConfigField "String", "SERVER_URL", BASE_URL_PROD
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -59,7 +91,8 @@ dependencies {
     def dagger_version = '2.27'
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
+//    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     // Retrofit 2
@@ -74,5 +107,14 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
 
-    compileOnly 'javax.annotation:jsr250-api:1.0'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //page indicator
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3'
+
+    //Lottie
+    implementation 'com.airbnb.android:lottie:3.4.1'
+//    compileOnly 'javax.annotation:jsr250-api:1.0'
 }
